kubernetes/fluxcd/apps/base/audiomuse-ai/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: audiomuseserver
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`audiomuse.kube-01.home.majabojarska.dev`)
      kind: Rule
      services:
        - name: audiomuse-ai-flask-service
          port: 8000
    - match: Host(`audiomuse.home.majabojarska.dev`)
      kind: Rule
      services:
        - name: audiomuse-ai-flask-service
          port: 8000
  tls:
    secretName: certificate-secret
